# speutils-debs

./: Doxyfile  LICENSE  Makefile.am  configure.ac  libspeutils.pc.in  spemessage.c  spethread.c  spethread.h  update.sh
debian/: changelog  control  copyright  libspeutils-dev.files  libspeutils0.files  rules
example/: Makefile  example1.c  example1.h  example2.c  example2.h  spu_example1.c  spu_example2.c
include/speutils/: messages.h  spefifo.h  spemessage.h  spethread.h  speutils.h  spu_dmalib.h  spu_message.h
shared/: Makefile.am  linkedlist.c  linkedlist.h  pic.h  ring.c  ring.h
spu/: Makefile.am  configure.ac
spu/src/: Makefile.am  pic_test.c  spu_taskmanager.c  spu_taskmanager.h  spu_taskpipe.c  spu_taskpipe.h
src/: Makefile.am  spefifo.c  spemessage.c  spethread.c
tst/: Makefile.am  ring_test.c  task_iface.c
